further on downward

--- a/README.org
+++ b/README.org
@@ -16,5 +16,7 @@ accout ( guicho2.71828 ).
 
 Command line options are available by running =componen-planner= with no
 arguments.  For configurations that uses fast-downward as MainPlanner or
-ComponentPlanner, specify =FD_DIR= environment variable.
+ComponentPlanner, specify =FD_DIR= environment variable, which should be
+the absolute pathname of =downward= directory (which is automatically
+fetched and build by =make=).
 
