readme: dependency and testing

--- a/README.org
+++ b/README.org
@@ -6,13 +6,20 @@ Problems with Component Macros. In ICAPS2015]].
 * Building
 
 Simply run =make= to make an executable binary =componen-planner=.
+For any trouble building the binary, contact me by email.
+
+* Dependency
+
 Dependencies are automatically loaded except =git= and the [[http://www.fast-downward.org/ObtainingAndRunningFastDownward][dependencies of
 Fast Downward]], which is:
 
 :  sudo apt-get install mercurial g++ make python flex bison g++-multilib
 
 We do not support 32bit systems.
-For any trouble building the binary, contact me by email.
+When MainPlanner/ComponentPlanner uses 32bit planners such as marvin,
+install the 32bit library. The list is not comprehensive.
+
+:  sudo apt-get install ia32-libs
 
 * Running
 
@@ -21,4 +28,11 @@ arguments.  For configurations that uses fast-downward as MainPlanner or
 ComponentPlanner, specify =FD_DIR= environment variable, which should be
 the absolute pathname of =downward= directory (which is automatically
 fetched and built by =make=).
+
+* Testing
+
+Test instances are in test.tar.gz, so unpack it accordingly.
+
+test.sh is a simple shell script that tests if the binary works correctly
+on a small problem set.
 
