--- a/README.org
+++ b/README.org
@@ -14,7 +14,7 @@ Dependencies are automatically loaded except =cgroup-bin= and =libffi=.
 Restart is required after the installation (in order to make cgroups
 activated).
 
-:  sudo apt-get install cgroup-bin libffi-dev
+:  sudo apt-get install cgroup-bin libffi-dev git make autoconf build-essential libtool libglib2.0-dev 
 
 Also, the [[http://www.fast-downward.org/ObtainingAndRunningFastDownward][dependencies of Fast Downward]] should be resolved. It is:
 
