--- a/README.org
+++ b/README.org
@@ -10,10 +10,9 @@ Simply run =make= to make an executable binary =componen-planner=.
 * Dependency
 
 + https://github.com/roswell/roswell
-+ =cgroup-bin= Restart is required after the installation (in order to make cgroups activated).
 + =libffi=
 
-:  sudo apt-get install cgroup-bin libffi-dev git make autoconf build-essential libtool libglib2.0-dev 
+:  sudo apt-get install libffi-dev git make autoconf build-essential libtool libglib2.0-dev
 
 Also, the [[http://www.fast-downward.org/ObtainingAndRunningFastDownward][dependencies of Fast Downward]] should be resolved. It is:
 
